- BERTurk + Gemini 2.5 Flash entegrasyonu - Hybrid search (BM25 + Semantic) - 141 mevzuat belgesi, 2601 madde - Kaynak gösterme özelliği

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ mevzuat_db/
 Mevzuat/
 
 # Large generated JSON files
-tum_mevzuat_maddeleri.json
+tum_mevzuat_maddeleri_old.json
 
 # Python cache
 __pycache__/
